crates/md-cli/tests/snapshots/json_snapshots__inspect@pkh_basic.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 1,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "index": 0
        },
        "kind": "KeyArg"
      },
      "tag": "Pkh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "5f53c7e8d1932fb87250e5f415e1c950"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "559e64b234f485622b4529bfe79d6122"
  },
  "wallet_policy_id": {
    "fingerprint": "0x7b03b19e",
    "hex": "7b03b19ed19501a0091944e28664a805"
  }
}
