crates/md-cli/tests/snapshots/json_snapshots__inspect@sh_wpkh.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 1,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": {
                "index": 0
              },
              "kind": "KeyArg"
            },
            "tag": "Wpkh"
          }
        ],
        "kind": "Children"
      },
      "tag": "Sh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "dc349aaae5d63be0014786fc472fdf30"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "6a20808f307d122a21916d788ce233e0"
  },
  "wallet_policy_id": {
    "fingerprint": "0x9eda2151",
    "hex": "9eda2151ae6b33e36bb99c585b59a79b"
  }
}
