crates/md-cli/tests/snapshots/json_snapshots__inspect@sh_wsh_multi.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 2,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": [
                {
                  "body": {
                    "data": {
                      "indices": [
                        0,
                        1
                      ],
                      "k": 2
                    },
                    "kind": "MultiKeys"
                  },
                  "tag": "Multi"
                }
              ],
              "kind": "Children"
            },
            "tag": "Wsh"
          }
        ],
        "kind": "Children"
      },
      "tag": "Sh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "41b6ce602a7f05fcea2c1af38937a2af"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "ed9b6a1d5a268b12b6d20c3e5d90d39b"
  },
  "wallet_policy_id": {
    "fingerprint": "0x7eb6facb",
    "hex": "7eb6facb31258880114f9b1dfd66bd72"
  }
}
