crates/md-cli/tests/snapshots/json_snapshots__inspect@tr_keyonly.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 1,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "is_nums": false,
          "key_index": 0,
          "tree": null
        },
        "kind": "Tr"
      },
      "tag": "Tr"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "99321b4f4af37a069cb7f7628454e8f7"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "6a69ed9bce2b51c6fa20895e2209a4a2"
  },
  "wallet_policy_id": {
    "fingerprint": "0x1e8e8090",
    "hex": "1e8e809032090ba6eb393cced7a454b4"
  }
}
