crates/md-cli/tests/snapshots/json_snapshots__inspect@tr_with_leaf.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 2,
    "path_decl": {
      "data": "m/48'/0'/0'/2'",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "is_nums": false,
          "key_index": 0,
          "tree": {
            "body": {
              "data": {
                "index": 1
              },
              "kind": "KeyArg"
            },
            "tag": "PkK"
          }
        },
        "kind": "Tr"
      },
      "tag": "Tr"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "2b646679402a088c8e5cfe4703fc1e5b"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "c8fe87cd5fb7351db12479a2bab8f8ad"
  },
  "wallet_policy_id": {
    "fingerprint": "0x547cd241",
    "hex": "547cd241cd47a109af5906fc1fbf3ba6"
  }
}
