crates/md-cli/tests/snapshots/json_snapshots__inspect@wpkh_basic.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 1,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "index": 0
        },
        "kind": "KeyArg"
      },
      "tag": "Wpkh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "6386e83f114dc65da7afe37052228760"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "45775d4d6561625de6efadaad70a1e9b"
  },
  "wallet_policy_id": {
    "fingerprint": "0x3ace1082",
    "hex": "3ace1082550f64756b7ad166c0787cb2"
  }
}
