crates/md-cli/tests/snapshots/json_snapshots__inspect@wsh_divergent_paths.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 2,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": [
        [
          1,
          {
            "multipath": [
              {
                "hardened": false,
                "value": 2
              },
              {
                "hardened": false,
                "value": 3
              }
            ],
            "wildcard_hardened": false
          }
        ]
      ]
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": {
                "indices": [
                  0,
                  1
                ],
                "k": 2
              },
              "kind": "MultiKeys"
            },
            "tag": "Multi"
          }
        ],
        "kind": "Children"
      },
      "tag": "Wsh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "md1_encoding_id": {
    "hex": "3dbb584b7e1233aff29dbda955a5e60d"
  },
  "schema": "md-cli/2",
  "wallet_descriptor_template_id": {
    "hex": "eb44036499d0f6945ebf3ec606f5d164"
  },
  "wallet_policy_id": {
    "fingerprint": "0xa17921c9",
    "hex": "a17921c973f41dc0ef7c63103c4d57bd"
  }
}
